--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
 * {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   vertical-align: baseline;
   box-sizing: border-box;
   color: #fff; }
@@ -19,10 +19,6 @@ blockquote, q {
   quotes: none; }
   blockquote:before, blockquote:after, q:before, q:after {
     content: ''; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
 
 body {
   -webkit-text-size-adjust: none;
@@ -56,8 +52,7 @@ body {
 body, input, textarea, select {
   font-family: 'Mulish', sans-serif;
   line-height: 1.85em;
-  font-weight: 300;
-  font-size: 13pt; }
+  font-weight: 300; }
 
 main {
   box-sizing: border-box; }
@@ -67,27 +62,6 @@ a {
   color: #fff; }
   a img {
     border: 0; }
-
-b, strong {
-  font-weight: 600; }
-
-i, em {
-  font-style: italic; }
-
-sub {
-  position: relative;
-  top: 0.5em;
-  font-size: 0.8em; }
-
-sup {
-  position: relative;
-  top: -0.5em;
-  font-size: 0.8em; }
-
-blockquote {
-  border-left: solid 0.75em #eee;
-  padding: 1em 0 1em 1.5em;
-  font-style: italic; }
 
 h1 {
   margin: 0 0 0.75em 0; }
@@ -103,18 +77,15 @@ h2, h3, h4, h5, h6 {
   font-weight: 700; }
 
 h1 {
-  font-size: 3.25em;
   letter-spacing: -0.025em;
   font-weight: 300; }
   h1 strong {
     font-weight: 700; }
 
 h2 {
-  font-size: 2em;
   letter-spacing: -0.015em; }
 
 h3 {
-  font-size: 1.5em;
   letter-spacing: -0.015em; }
 
 em, i {
@@ -131,15 +102,11 @@ hr {
   height: 1px;
   margin: 3em 0; }
 
-p, ul, ol, dl, table {
+p, ul, ol, dl {
   margin-bottom: 1em; }
 
 header > p {
-  font-size: 1.25em;
   margin: 0; }
-
-footer > p {
-  font-size: 1.25em; }
 
 .wide-row {
   margin: 0 auto;
@@ -844,25 +811,6 @@ footer > p {
           .row.gtr-200.gtr-uniform > * {
             padding-top: 30px; } }
 
-/* Tables */
-table {
-  width: 100%; }
-  table.default {
-    width: 100%; }
-    table.default tr {
-      border-top: solid 1px #eee; }
-      table.default tr:first-child {
-        border-top: 0; }
-    table.default td {
-      padding: 0.5em 1em 0.5em 1em; }
-    table.default th {
-      text-align: left;
-      padding: 0.5em 1em 0.5em 1em;
-      font-weight: 600;
-      margin: 0 0 1em 0; }
-    table.default thead {
-      background: #4f4f4f; }
-
 /* Section/Article */
 section > :last-child,
 article > :last-child,
@@ -912,7 +860,6 @@ button,
   border-radius: 8px;
   overflow: hidden;
   padding: 1em 2.35em 1em 2.35em;
-  font-size: 1.1em;
   max-width: 24em; }
   input[type="button"]:hover,
   input[type="submit"]:hover,
@@ -932,7 +879,6 @@ button,
   input[type="reset"].large,
   button.large,
   .button.large {
-    font-size: 1.5em;
     letter-spacing: -0.025em; }
   input[type="button"].alt,
   input[type="submit"].alt,
@@ -1001,8 +947,6 @@ ul.actions {
     text-rendering: auto;
     line-height: 1;
     text-transform: none !important; }
-  .icon:before {
-    font-size: 1.25em; }
   .icon > .label {
     display: none; }
   .icon.solid:before {
@@ -1012,8 +956,6 @@ ul.actions {
     display: block;
     margin: 0 0 1.5em 0;
     cursor: default; }
-    .icon.featured:before {
-      font-size: 6em; }
 
 /* Wrappers */
 .wrapper {
@@ -1083,18 +1025,13 @@ body > article {
   #top h1 {
     margin-top: 0.35em; }
   #top p {
-    font-size: 1.5em;
     line-height: 1.75em; }
     #top p a {
       color: inherit; }
 
-.contact footer {
-  font-size: 0.9em; }
-
 /* Copyright */
 #copyright {
   color: #666;
-  font-size: 1em;
   line-height: 3em;
   list-style: none;
   padding-top: 1em;
@@ -1121,13 +1058,6 @@ body > article {
     width: calc(85vw - 25px); } }
 /* Large */
 @media screen and (max-width: 1280px) {
-  /* Basic */
-  body {
-    font-size: 11pt; }
-
-  input, textarea, select {
-    font-size: 11pt; }
-
   /* Wrappers */
   .wrapper {
     padding: 3em 0 3em 0;
@@ -1161,7 +1091,6 @@ body > article {
 
   .button {
     padding: 1em 3em;
-    font-size: 1.1em;
     max-width: 28em; } }
 /* Small */
 @media screen and (max-width: 736px) {
@@ -1171,22 +1100,13 @@ body > article {
 
   body, input, textarea, select {
     line-height: 1.75em;
-    font-size: 10pt;
     letter-spacing: 0; }
 
   h1, h2, h3, h4, h5, h6 {
-    font-size: 1.25em;
     margin: 0 0 2em 0; }
 
   h1 {
-    font-size: 2.25em;
     line-height: 1.25em; }
-
-  header > p {
-    font-size: 1.25em; }
-
-  footer > p {
-    font-size: 1.25em; }
 
   hr {
     margin: 1.5em 0 2em 0; }
@@ -1202,7 +1122,6 @@ body > article {
   button,
   .button {
     text-align: center;
-    font-size: 1.2em;
     width: 100%;
     padding: 1em 0 1em 0; }
     input[type="button"].large,
@@ -1210,7 +1129,6 @@ body > article {
     input[type="reset"].large,
     button.large,
     .button.large {
-      font-size: 1.2em;
       letter-spacing: 0; }
 
   /* Social */
@@ -1270,15 +1188,12 @@ body > article {
       width: 15em;
       height: 15em;
       margin-bottom: 0; }
-    #top p {
-      font-size: 1em; }
 
   .contact footer {
     margin: 0; }
 
   /* Copyright */
   #copyright {
-    font-size: 1em;
     margin: 0; }
     #copyright li {
       display: block;
@@ -1293,72 +1208,12 @@ body > article {
     text-align: center; }
     #header-li ul {
       display: inline-block;
-      text-align: left; } }
-/* Block 10 */
-/* Box */
-.pic {
-  padding: 3.5em; }
-  .pic.alt {
-    background: none;
-    border: none;
-    padding: 0; }
+      text-align: left; }
 
-.card {
-  position: relative;
-  height: 20em; }
-  .card:after {
-    clear: both;
-    content: '';
-    display: block; }
-  .card h3, .card h4, .card h5, .card h6 {
-    text-align: inherit; }
-  .card .image {
-    display: inline-block;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    width: 50%; }
-    .card .image img {
-      display: block;
-      min-height: 100%;
-      min-width: 100%;
-      position: absolute; }
-  .card:before {
-    background: #f55e2c;
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle; }
-  .card .pic-card {
-    display: inline-block;
-    padding: 3.5em;
-    vertical-align: middle;
-    width: 48%; }
-    .card .pic-card h3 {
-      margin-bottom: 0.5em; }
-    .card .pic-card :last-child {
-      margin: 0; }
-  .card.left {
-    text-align: left; }
-    .card.left .image {
-      float: left; }
-      .card.left .image img {
-        right: 0;
-        top: 0; }
-    .card.left .pic-card {
-      padding-right: 0; }
-  .card.right {
-    text-align: right; }
-    .card.right .image {
-      float: right; }
-      .card.right .image img {
-        left: 0;
-        top: 0; }
-    .card.right .pic-card {
-      padding-left: 0; }
-  .card.long .pic-card {
-    padding-top: 0; }
-
+  #promotion-box {
+    width: 100%; }
+    #promotion-box .box {
+      width: 100%; } }
 /* header li */
 .pluses ul {
   list-style-image: url("../images/check.svg"); }
@@ -1475,16 +1330,22 @@ input[type=checkbox] {
       width: calc(100% - 1em);
       align-items: center;
       margin-left: 0.5em;
-      font-size: 1em;
       text-align: center; }
   .footer-contacts .footer-right {
     width: 55%;
     justify-content: flex-end; }
-  .footer-contacts .table-contact {
-    padding-right: 0.5em;
-    width: 5em; }
-  .footer-contacts table {
-    font-size: 1rem; }
+    .footer-contacts .footer-right ul {
+      list-style-type: none;
+      padding-left: 0; }
+    .footer-contacts .footer-right li:before {
+      content: "Телеграм";
+      display: inline-block;
+      width: 5em;
+      margin-right: 10px; }
+    .footer-contacts .footer-right li:nth-child(2):before {
+      content: "Телефон"; }
+    .footer-contacts .footer-right li:nth-child(3):before {
+      content: "E-mail"; }
 
 .social-icons {
   display: flex;
@@ -1507,7 +1368,8 @@ input[type=checkbox] {
   width: 5em; }
 
 #steps-row {
-  background-color: #9b9b9b; }
+  background-color: #9b9b9b;
+  /* steps */ }
   #steps-row .my-flex-cont {
     display: flex;
     flex-flow: row wrap;
@@ -1519,8 +1381,10 @@ input[type=checkbox] {
     border: 2px seagreen solid;
     flex-basis: calc(50% - 10px);
     max-width: 200px; }
+  #steps-row p {
+    width: 100%; }
   #steps-row img {
-    width: 20%; }
+    width: 100%; }
 
 /* Forms */
 .form__group {
@@ -1546,7 +1410,6 @@ input[type=checkbox] {
     top: 0;
     display: block;
     transition: 0.2s;
-    font-size: 17px;
     color: #9b9b9b;
     pointer-events: none; }
   .form__group .form__field:focus {
