--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,7 @@
   padding: 0;
   border: 0;
   vertical-align: baseline;
-  box-sizing: border-box;
-  color: #fff; }
+  box-sizing: border-box; }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -21,7 +20,7 @@ blockquote, q {
     content: ''; }
 
 body {
-  -webkit-text-size-adjust: none;
+  color: #fff;
   line-height: 1;
   background-color: #171311; }
 
@@ -811,13 +810,6 @@ header > p {
           .row.gtr-200.gtr-uniform > * {
             padding-top: 30px; } }
 
-/* Section/Article */
-section > :last-child,
-article > :last-child,
-section:last-child,
-article:last-child {
-  margin-bottom: 0; }
-
 /* Image */
 .image {
   display: inline-block;
@@ -859,7 +851,7 @@ button,
   cursor: pointer;
   border-radius: 8px;
   overflow: hidden;
-  padding: 1em 2.35em 1em 2.35em;
+  padding: 0.8em 2em;
   max-width: 24em; }
   input[type="button"]:hover,
   input[type="submit"]:hover,
@@ -1136,15 +1128,10 @@ body > article {
     padding: 1em 0.5em 0 0.5em; }
     ul.social li {
       margin: 0.5em 0.5em 0.5em 0.5em; }
-      ul.social li a {
-        top: 0 !important; }
-        ul.social li a:before {
-          background-color: transparent !important; }
 
   /* Box */
   .box {
-    padding: 30px 20px 30px 20px;
-    margin: 0 0 20px 0 !important; }
+    padding: 30px 20px 30px 20px; }
     .box h3 {
       margin-bottom: 0.25em; }
     .box .image.centered {
@@ -1156,13 +1143,9 @@ body > article {
       margin: -50px 0 50px -40px;
       width: auto; }
     .box.style1 {
-      max-width: 32em;
-      margin-left: auto !important;
-      margin-right: auto !important; }
+      max-width: 32em; }
     .box.style2 {
-      max-width: 32em;
-      margin-left: auto !important;
-      margin-right: auto !important; }
+      max-width: 32em; }
 
   /* Wrappers */
   .wrapper {
@@ -1239,8 +1222,15 @@ body > article {
 header {
   background-color: #100e0c; }
 
+.row #promotion-box {
+  background-color: #490a29; }
+
 footer {
-  background-color: #100e0c; }
+  background-color: #100e0c;
+  font-size: 0.8em;
+  color: #8a8a8a; }
+  footer a {
+    color: #8a8a8a; }
 
 input[type=checkbox] {
   -moz-appearance: checkbox;
@@ -1302,8 +1292,7 @@ input[type=checkbox] {
 
 .left-label {
   margin-top: 1em;
-  text-align: left;
-  padding-left: 1em; }
+  text-align: left; }
 
 .button {
   margin: auto; }
@@ -1360,7 +1349,7 @@ input[type=checkbox] {
   justify-content: center;
   margin-top: 20px; }
   .social-icons img {
-    width: 48px; }
+    min-width: 2.5em; }
   .social-icons .icon {
     display: flex;
     justify-content: center;
