--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,9 @@
 $main-color: #f55e2c;
 $body-color: #171311;
 $body-sec-color: #100e0c;
+$main-font-size: clamp(1rem, calc(12px + 1vw), 24px);
+$footer-font-size: 0.8em;
+$footer-font-color: #8a8a8a;
 
 
 // Breakpoints.
@@ -25,7 +28,7 @@ $body-sec-color: #100e0c;
   border: 0;
   vertical-align: baseline;
   box-sizing: border-box;
-  color: #fff;
+
 }
 
 article, aside, details, figcaption, figure,
@@ -47,7 +50,7 @@ blockquote, q {
 }
 
 body {
-  -webkit-text-size-adjust: none;
+  color: #fff;
   line-height: 1;
   background-color: $body-color;
 }
@@ -301,15 +304,6 @@ header {
   }
 }
 
-/* Section/Article */
-
-section > :last-child,
-article > :last-child,
-section:last-child,
-article:last-child {
-  margin-bottom: 0;
-}
-
 /* Image */
 
 .image {
@@ -366,7 +360,7 @@ button,
   cursor: pointer;
   border-radius: 8px;
   overflow: hidden;
-  padding: 1em 2.35em 1em 2.35em;
+  padding: 0.8em 2em;
   max-width: 24em;
 
 
@@ -762,14 +756,6 @@ body > article {
 
     li {
       margin: 0.5em 0.5em 0.5em 0.5em;
-
-      a {
-        top: 0 !important;
-
-        &:before {
-          background-color: transparent !important;
-        }
-      }
     }
   }
 
@@ -777,7 +763,6 @@ body > article {
 
   .box {
     padding: 30px 20px 30px 20px;
-    margin: 0 0 20px 0 !important;
 
     h3 {
       margin-bottom: 0.25em;
@@ -799,14 +784,10 @@ body > article {
 
     &.style1 {
       max-width: 32em;
-      margin-left: auto !important;
-      margin-right: auto !important;
     }
 
     &.style2 {
       max-width: 32em;
-      margin-left: auto !important;
-      margin-right: auto !important;
     }
   }
 
@@ -925,8 +906,18 @@ header {
   background-color: $body-sec-color;
 }
 
+.row #promotion-box {
+  background-color: #490a29;
+}
+
 footer {
   background-color: $body-sec-color;
+  font-size: $footer-font-size;
+  color: $footer-font-color;
+
+  a {
+    color: $footer-font-color;
+  }
 }
 
 input[type=checkbox] {
@@ -1002,7 +993,6 @@ input[type=checkbox] {
 .left-label {
   margin-top: 1em;
   text-align: left;
-  padding-left: 1em;
 }
 
 .button {
@@ -1087,7 +1077,7 @@ input[type=checkbox] {
   margin-top: 20px;
 
   img {
-    width: 48px;
+    min-width: 2.5em;
   }
 
   .icon {
